@@ -3,6 +3,8 @@ Smb4K 1.0.6 (2013-01-??):
   from Smb4KMountJob::slotActionFinished() too often.
 - Fixed unmounting of selected shares. Thanks go to Ettore Atalan for 
   reporting this issue.
+- Removed faulty and useless clean-up code from read function of
+  Smb4KCustomOptionsManager.
 
 Smb4K 1.0.5 (2012-12-26):
 - Fixed hanging of Smb4K if a custom mount prefix without a trailing
